synapse-backend/error.txt
file:///C:/Users/Dev/OneDrive/Desktop/synapse/synapse-backend/controllers/userController.js:5
import { getOnlineUserIds } from '../socket/socketServer.js';
         ^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../socket/socketServer.js' does not provide an export named 'getOnlineUserIds'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:369:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:671:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.11.1
